force-app/main/default/objects/mc_knowYourCustomerForm__c/mc_knowYourCustomerForm__c.object-meta.xml
<CustomObject>
    <description>Objecto personalizado para almacenar los valores del formulario de conozca su cliente.</description>
    <label>Formulario KYC</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Formulario Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formularios KYC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>