force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/bc_bankAccounts__c.field-meta.xml
<CustomField>
    <fullName>bc_bankAccounts__c</fullName>
    <label>Cuentas Bancarias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>