force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_accountId__c.field-meta.xml
<CustomField>
    <fullName>mc_accountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Formularios KYC</relationshipLabel>
    <relationshipName>Formularios_KYC</relationshipName>
    <type>Lookup</type>
</CustomField>