force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_addressInfo__c.field-meta.xml
<CustomField>
    <fullName>mc_addressInfo__c</fullName>
    <label>Información de Domicilio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>