force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_aditionalInfoAssets__c.field-meta.xml
<CustomField>
    <fullName>mc_aditionalInfoAssets__c</fullName>
    <label>Información adicional pasivos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>