force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_autocertification__c.field-meta.xml
<CustomField>
    <fullName>mc_autocertification__c</fullName>
    <label>Autocertificación</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>