force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_available__c.field-meta.xml
<CustomField>
    <fullName>mc_available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo si se marca es para habilitar la edición del formulario</description>
    <inlineHelpText>Este campo si se marca es para habilitar la edición del formulario</inlineHelpText>
    <label>Disponible</label>
    <type>Checkbox</type>
</CustomField>