force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_customerName__c.field-meta.xml
<CustomField>
    <fullName>mc_customerName__c</fullName>
    <label>Nombre Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>