force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_dependentActivity__c.field-meta.xml
<CustomField>
    <fullName>mc_dependentActivity__c</fullName>
    <label>Actividad Económica Dependiente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>