force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_documentId__c.field-meta.xml
<CustomField>
    <fullName>mc_documentId__c</fullName>
    <label>Cédula</label>
    <length>50</length>
    <type>Text</type>
</CustomField>