force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_financialInfo__c.field-meta.xml
<CustomField>
    <fullName>mc_financialInfo__c</fullName>
    <label>Información financiera</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>