force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_financialInfoAssets__c.field-meta.xml
<CustomField>
    <fullName>mc_financialInfoAssets__c</fullName>
    <label>Información financiera - Activos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>