force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_financialInfoExpenses__c.field-meta.xml
<CustomField>
    <fullName>mc_financialInfoExpenses__c</fullName>
    <label>Egresos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>