force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_financialInfoIncomes__c.field-meta.xml
<CustomField>
    <fullName>mc_financialInfoIncomes__c</fullName>
    <label>Ingresos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>