force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_financialInfoLiabilities__c.field-meta.xml
<CustomField>
    <fullName>mc_financialInfoLiabilities__c</fullName>
    <label>Pasivos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>