force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_independentActivity__c.field-meta.xml
<CustomField>
    <fullName>mc_independentActivity__c</fullName>
    <label>Actividad Económica Independiente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>