force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_InfoPEP__c.field-meta.xml
<CustomField>
    <fullName>mc_InfoPEP__c</fullName>
    <label>Información PEP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>