force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_internalUse__c.field-meta.xml
<CustomField>
    <fullName>mc_internalUse__c</fullName>
    <label>Uso Interno Mercapital</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>