force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_observations__c.field-meta.xml
<CustomField>
    <fullName>mc_observations__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>