force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_personalInfo__c.field-meta.xml
<CustomField>
    <fullName>mc_personalInfo__c</fullName>
    <label>Información Personal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>