force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_picklistLabel__c.field-meta.xml
<CustomField>
    <fullName>mc_picklistLabel__c</fullName>
    <label>Etiquetas Picklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>