force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_relatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>mc_relatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Formularios KYC</relationshipLabel>
    <relationshipName>Formularios_KYC</relationshipName>
    <type>Lookup</type>
</CustomField>