force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_riskProfile__c.field-meta.xml
<CustomField>
    <fullName>mc_riskProfile__c</fullName>
    <label>mc_riskProfile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>