force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_spouseInfo__c.field-meta.xml
<CustomField>
    <fullName>mc_spouseInfo__c</fullName>
    <label>Información de Cónyugue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>