force-app/main/default/objects/mc_knowYourCustomerForm__c/fields/mc_statusForm__c.field-meta.xml
<CustomField>
    <fullName>mc_statusForm__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Revisión Comercial</fullName>
            </value>
            <value>
                <fullName>Revisión Cumplimiento</fullName>
            </value>
            <value>
                <fullName>Revisión Completada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>