force-app/main/default/objects/mc_knowYourCustomerForm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mc_customerName__c</columns>
    <columns>mc_documentId__c</columns>
    <columns>mc_statusForm__c</columns>
    <columns>mc_relatedOpportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>