force-app/main/default/objects/mc_knowYourCustomerForm__c/listViews/mc_complianceUsers_mc_knowYourCustomerForm.listView-meta.xml
<ListView>
    <fullName>mc_complianceUsers_mc_knowYourCustomerForm</fullName>
    <filterScope>Queue</filterScope>
    <label>Usuaurios de cumplimiento</label>
    <queue>mc_complianceUsers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>